# cpp_kern_exp

./: CMakeLists.txt  LICENSE  README.md  bochslog.txt
resources/: bochsrc  menu.lst
src/: CMakeLists.txt  gdt.cpp  gdt.h  gdt.s  interrupts.cpp  interrupts.h  interrupts.s  kernel.cpp  keyboard.cpp  keyboard.h  link.ld  loader.s  multiboot.h  phys_alloc.cpp  portio.s  strutil.h  timer.cpp  util.cpp  util.h  video.cpp  video.h
src/kernel/: CMakeLists.txt  gdt.cpp  gdt.h  gdt.s  heap.cpp  heap.h  interrupts.cpp  interrupts.h  kernel.cpp  keyboard.h  multiboot.h  paging.cpp  paging.h  phys_alloc.cpp  phys_alloc.h  portio.s  process.cpp  process.h  strutil.h  timer.cpp  timer.h  user.s  util.cpp  util.h  video.h
src/loader/: CMakeLists.txt  elf.c  elf.h  loader.c  loader.s  loader_link.ld  multiboot.h  paging.c  paging.h  paging_scratch.s  util.c  util.h
